fixed spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,17 @@ body{
 }
 
 .maps{
-    // margin-top: -9%;
+    margin-top: 4%;
+}
+
+h2{
+    display: flex;
+    margin-bottom: -7rem;
+    margin-top: 3rem;
+    font-size: xx-large;
+    font-family: serif;
+    font-weight: bold;
+
 }
 
 nav div.links{
@@ -43,7 +53,7 @@ i{
     transition: 500ms;
 }
 
-i:hover{
+nav i:hover{
     scale: 1.25;
     color: #98dad9;
 }
@@ -82,6 +92,8 @@ h1, h2, h3{
     display: flex;
     justify-content: center;
 }
+
+
 
 .stateChart{
     width: 100vw;
@@ -145,8 +157,8 @@ button {
     justify-content: center;
     flex-direction: column;
     font-weight: bold;
-    margin-top: -5%;
-    margin-left: -1%;
+    // margin-top: -5%;
+    // margin-left: -1%;
 }
 
 #legTitle{
